# smb-vanilla-port

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.zig  build.zig.zon  decompiler-postprocess.py  fceux_movie_dump.lua  gen-headers.py  meson.build  meson_options.txt  meson_wasm.txt  smbport.ini
data/: smb2j_code_labels.csv  smb2j_ram.csv  smb2j_romarrays.csv  smb_code_labels.csv  smb_ram.csv  smb_romarrays.csv
docs/: claude-chat-imgui.txt  decisions.md  differences.md  reorg-claude-chat-2.txt  reorg-claude-chat.txt  reorg-claude-plan.md  reorg.txt  techdebt.md  zigbuild-claude-code-chat.txt
emscripten/: index.html
ghidra/: README.md
ghidra-processors/6502smb/data/languages/: 6502smb.cspec  6502smb.pspec
ghidra-scripts/: README.md  smb_datatypes.py  smb_flow.py  smb_fn_coverage.py  smb_jumptables.py
ghidra/ghidra-processors/: .gitignore
ghidra/ghidra-processors/6502smb/data/languages/: 6502smb.ldefs  6502smb.slaspec
ghidra/ghidra-scripts/: smb2j_analyze.py  smb2j_create_extra_fns.py  smb2j_datatypes.py  smb2j_fixup_branches.py  smb2j_fixup_refs.py  smb2j_getareadataaddr_switcher.py  smb2j_import.py  smb2j_jumptables.py  smb2j_remove_fallthru_overrides.py  smb2j_reset_and_nmi.py  smb2j_reset_and_nmi_and_irq.py  smb2j_tag_fns_to_omit.py  smb2j_util.py  smb_analyze.py  smb_create_extra_fns.py  smb_datatypes.py  smb_fixup_branches.py  smb_flow.py  smb_fn_coverage.py  smb_init_memorymaps.py  smb_jumptables.py  smb_remove_fallthru_overrides.py  smb_reset_and_nmi.py  smb_tag_fns_to_omit.py  smb_test.py
src/: audio.cpp  audio.h  audio_sdl3.cpp  base.h  base_public.h  cli_args.h  common.cpp  common.h  common_inc.h  common_inc_sound.h  config.h  config.inc  foundation.cpp  foundation.h  main.c  main.cpp  main_sdl.c  main_sdl2.c  main_sdl3.c  main_testrunner.c  mario.h  movie.c  movie.h  ppu.h  render_opengl.c  render_opengl_noop.c  render_raster.c  smb1.cpp  smb2j.cpp  smb_functions.h  smbcommon.cpp  smbcommon.h  smbcore.c  smbcore.cpp  smbcore.h  time.c  time.h  time_emscripten.c  time_sdl.c
src/platform/: audio_sdl.cpp  config.h  main_imgui.cpp  main_sdl.c  main_sdl2.c  main_sdl3.c  main_testrunner.c  meson.build  movie.c  movie.h  render_opengl.c  render_opengl.h  render_opengl_noop.c  render_raster.c  render_raster.h  time.h  timer.h  timer_sdl.c
src/smbcore/: area.c  area.h  base.h  common.c  common_sound.c  consts.h  ctx.h  interface.h  mario.h  meson.build  smb1.h  smb1_romarrays.h  smb1only.c  smb2j.h  smb2j_romarrays.h  smb2jonly.c  smb_romarrays.h  smbcore.c  structs.h  tiles.h  types.h  vars.h
